--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
- border: 1px solid red;
+ border: 0px solid red;
 }
 
 @font-face {
@@ -7,12 +7,43 @@
  src: url("assets/Norse-Bold.otf");
 }
 
+body {
+ padding: 0;
+ margin: 0;
+}
+
+.body-container {
+ display: flex;
+ flex-direction: row;
+
+ margin: 0;
+}
+
+.form-container {
+ display: flex;
+ flex-direction: column;
+ flex-grow: 1;
+}
+
+.hero-text {
+ width: 100%;
+}
+
+form > div {
+ display: flex;
+}
+
+label {
+ display: flex;
+ flex-direction: column;
+}
+
 .image-container {
  position: relative;
  background-image: url("assets/photo-1585202900225-6d3ac20a6962.avif");
  background-size: auto;
  background-repeat: no-repeat;
- width: 40vw;
+ width: min(40vw, 647px);
  height: 100vh;
 
  display: flex;
@@ -21,16 +52,17 @@
 .image-container > span {
  color: white;
  align-self: flex-end;
- margin: 0 auto;
+ margin: 5% auto;
 }
 
 .logo-container {
  padding: 20px 0;
 
  width: 100%;
+ height: 15%;
 
  position: absolute;
- top: 150px;
+ top: 25%;
  background-color: rgba(0, 0, 0, 0.6);
  
  display: flex;
@@ -40,15 +72,20 @@
 
 .logo {
  display: flex;
+ flex-shrink: 1;
+ align-items: center;
 }
 
 .logo > img {
- height: 7em;
+ width: min(20%, 5rem);
+ height: auto;
+
+ margin-left: auto;
 }
 
 .logo > span {
  color: white;
  font-family: NorseBold;
- font-size: 7em;
- align-self: center;
+ font-size: min(7rem, 20vw);
+ margin-right: auto;
 }
