--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@
 body {
  padding: 0;
  margin: 0;
+
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+a {
+ color: #596D48;
+ text-decoration: none;
+ font-weight: bold;
 }
 
 .body-container {
@@ -23,19 +31,68 @@ body {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
+
+ background-color: #f7f7f7;
 }
 
 .hero-text {
+ margin-top: 10vh;
+ margin-bottom: 10vh;
  width: 100%;
+ padding: 0 5%;
+
+ font-size: 24px;
+ font-weight: bold;
 }
 
-form > div {
+form {
+ padding: 0;
+ margin-bottom: 5%;
+}
+
+.fields {
+ background-color: white;
+ padding: 5%;
+ box-shadow: 0 2px 5px -5px;
+ margin-bottom: 5%;
+}
+
+.fields > div {
  display: flex;
+ flex-direction: row;
 }
 
 label {
  display: flex;
  flex-direction: column;
+
+ margin-right: 5%;
+ margin-bottom: 20px;
+
+ color: #494a4b;
+ text-shadow: 1px 1px 1px #d3d2d2;
+}
+
+input {
+ border: 1px solid #E5E7EB;
+ border-radius: 3px;
+}
+
+button {
+ padding: 10px 30px;
+ margin-left: 5%;
+
+ background-color: #596D48;
+ box-shadow: 0px 2px 5px black;
+ color: white;
+ font-weight: bold;
+
+ 
+ border-radius: 4px;
+}
+
+.log-in {
+ padding-left: 5%;
 }
 
 .image-container {
