make form margins more consistent

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ a {
  margin-top: 10vh;
  margin-bottom: 10vh;
  width: 100%;
- padding: 0 5%;
+ padding: 0 30px;
 
  font-size: 24px;
  font-weight: bold;
@@ -49,14 +49,14 @@ a {
 
 form {
  padding: 0;
- margin-bottom: 5%;
+ margin-bottom: 30px;
 }
 
 .fields {
  background-color: white;
- padding: 5%;
+ padding: 30px;
  box-shadow: 0 2px 5px -5px;
- margin-bottom: 5%;
+ margin-bottom: 30px;
 }
 
 .fields > div {
@@ -68,7 +68,7 @@ label {
  display: flex;
  flex-direction: column;
 
- margin-right: 5%;
+ margin-right: 30px;
  margin-bottom: 20px;
 
  font-size: 0.95rem;
@@ -90,13 +90,17 @@ input:active,
 input:focus,
 input:focus-visible {
  outline: 0;
- border: 2px solid #7591c9;
+ border-color:  #7591c9;
  box-shadow: 1px 1px 3px #d3d2d2;
+}
+
+input:invalid {
+ border-color: rgb(212, 78, 78)
 }
 
 button {
  padding: 10px 30px;
- margin-left: 5%;
+ margin-left: 30px;
 
  background-color: #596D48;
  box-shadow: 0px 2px 5px black;
@@ -108,7 +112,8 @@ button {
 }
 
 .log-in {
- padding-left: 5%;
+ padding-left: 30px;
+ margin-bottom: auto;
 }
 
 .image-container {
@@ -125,7 +130,7 @@ button {
 .image-container > span {
  color: white;
  align-self: flex-end;
- margin: 5% auto;
+ margin: 10px auto;
 }
 
 .logo-container {
